--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -3,7 +3,9 @@ name: Hello-World
 on: push
 
 jobs:
-  hello-job:
+  hello-job:  
     runs-on: ubuntu-latest
-    runs: echo "Hello, world!"
+    steps:
+     - name: Echo Text
+       run: echo "Hello, world!"
 
